--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     <title>WeatherApp</title>
     </head>
 <body>
-    <div class="container">
     <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
-        <div class="temperature-description">Its cold</div>
+        <h3>TimeZone:</h3>
+        <h1 class="location-timezone">loading data..</h1>
+    </div>
+    <div class="weather">
+        <div class="temperature-description">loading data..</div>
         <canvas class="icon" width="128" height="128"></canvas>
     </div>
-    <div class="temperature">
-        <div class="degree-section">
-            <h2 class="temperature-degree">34</h2>
-            <span>F</span>
-        </div>
-       
+    <div class="temperature"> 
+        <span>F</span>     
+            <h2 class="temperature-degree">loading data..</h2>
         </div>
         <script src="skycons.js"></script>
     <script src="app.js"></script>x
-    </div>
   </body>
 </html>
